# google-devjam

./: README.md
backend/: .gitignore  docker-compose.yaml  go.mod  go.sum  main.go  pyproject.toml  requirements_neural_tts.txt  simple_mac_tts.py  start_neural_tts_modern.sh  test_preferences_api.md
backend/model/: news.go  user.go  vocabulary.go
backend/router/auth/: login.go  logout.go  me.go  openapi.json  register.go  route.go
backend/router/news/: generate.go  get.go  openapi.json  route.go
backend/router/user/: me.go  openapi.json  preferences.go  router.go
backend/router/vocabulary/: delete.go  get.go  new.go  openapi.json  recommend.go  route.go  update.go
backend/utils/encrypt/: argon.go  jwt.go  snowflake.go
backend/utils/firebase/: firebase.go
backend/utils/gemini/: recommand.go  search_news.go  translate.go
backend/utils/middleware/: jwt_middleware.go
backend/utils/mongodb/: connect.go
backend/utils/s3/: client.go
backend/utils/services/: audio_service.go
backend/utils/tts/: client.go
frontend/: LOGIN_IMPROVEMENTS.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  manifest.ts  page.tsx
frontend/src/components/: add-interests-dialog.tsx  add-word-dialog.tsx  ai-loading-animation.tsx  audio-player.tsx  bottom-navigation.tsx  delete-word-dialog.tsx  device-not-supported.tsx  difficulty-badge.tsx  difficulty-loading-animation.tsx  install-button.tsx  install-prompt.tsx  login-form.tsx  news-card-skeleton.tsx  news-card.tsx  quiz-component.tsx  (+9 more)
(+31 files in other folders)
